@@ -697,6 +697,8 @@ my @mcu_missed_debug =
   'PIC16F1709', 'PIC16LF1709', 'PIC16F1713', 'PIC16LF1713',
   'PIC16F1716', 'PIC16LF1716', 'PIC16F1717', 'PIC16LF1717',
   'PIC16F1718', 'PIC16LF1718', 'PIC16F1719', 'PIC16LF1719',
+  'PIC16F1764', 'PIC16LF1764', 'PIC16F1765', 'PIC16LF1765',
+  'PIC16F1768', 'PIC16LF1768', 'PIC16F1769', 'PIC16LF1769',
   'PIC16F1782', 'PIC16LF1782', 'PIC16F1783', 'PIC16LF1783',
   'PIC16F1784', 'PIC16LF1784', 'PIC16F1786', 'PIC16LF1786',
   'PIC16F1787', 'PIC16LF1787', 'PIC16F1788', 'PIC16LF1788',
